# coursehub

./: .env.example  Makefile  alembic.ini  app.py  docker-compose.yml  pyproject.toml
alembic/: env.py
apps/common/database/: database.py
apps/courses/: main.py  settings.py
apps/courses/api/: course_api.py  monitoring_routes.py  routes.py
apps/courses/database/: __init__.py
apps/courses/di/: __init__.py  repository_providers.py
apps/courses/repositories/: __init__.py  course_repository.py  models.py
apps/frontend/: __init__.py  main.py
apps/users/: main.py  settings.py
apps/users/api/: routes.py  user_api.py
apps/users/database/: __init__.py  models.py  users_repository.py
apps/users/di/: __init__.py  domain_providers.py  repository_providers.py
apps/users/domain/: __init__.py  create_user.py
apps/users/domain/entities/: user.py
common/: settings.py
common/di/: __init__.py  database_providers.py
common/utils/: __init__.py  utils.py
course/: __init__.py  app.py  database.py  di.py  main.py  models.py  routes.py  settings.py
course/api/: course_api.py  monitoring_routes.py  routes.py
course/database/: __init__.py  database.py
course/di/: __init__.py  database_providers.py  repository_providers.py
course/repositories/: __init__.py
frontend/: __init__.py  main.py
migrations/: env.py
shared/domain/: usecase.py
shared/entities/: __init__.py  unique_id.py  value_object.py
users/: __init__.py  routes.py
users/api/: routes.py  user_api.py
users/database/: __init__.py  models.py  users_repository.py
users/di/: __init__.py  database_providers.py
