[tool.poetry]
name = "coursehub"
version = "0.1.0"
description = "Simple Course hub application"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
gevent = ">=23.7,<26.0"
flask = "^3.1.2"
sanctumlabs-dbkit = "^1.0.0"
flask-injector = "^0.15.0"
uvicorn = "^0.38.0"
fastapi = "^0.121.0"
pydantic-settings = "^2.11.0"
psycopg2 = "^2.9.11"
python-multipart = "^0.0.20"
nanoid = "^2.0.0"
pydantic-extra-types = "^2.10.6"
bcrypt = "^5.0.0"
alembic = "^1.17.1"

[tool.poetry.dev-dependencies]
pylint = "^4.0.2"
pytest = "^9.0.0"
black = "^25.9.0"
pre-commit = "^4.4.0"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
