[tool.poetry]
name = "coursehub"
version = "0.1.0"
description = "Simple Course hub application"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
gevent = ">=23.7,<26.0"
flask = "^3.1.2"
sanctumlabs-dbkit = "^1.0.0"
flask-injector = "^0.15.0"
uvicorn = "^0.40.0"
fastapi = "^0.127.0"
pydantic-settings = "^2.12.0"
psycopg2 = "^2.9.11"
python-multipart = "^0.0.21"
nanoid = "^2.0.0"
pydantic-extra-types = "^2.10.6"
bcrypt = "^5.0.0"
alembic = "^1.17.2"

[tool.poetry.dev-dependencies]
pylint = "^4.0.4"
pytest = "^9.0.2"
black = "^25.12.0"
pre-commit = "^4.5.1"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
