[tool.poetry]
name = "coursehub"
version = "0.1.0"
description = "Simple Course hub application"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
gevent = ">=23.7,<27.0"
flask = "^3.1.3"
sanctumlabs-dbkit = "^1.0.0"
flask-injector = "^0.15.0"
uvicorn = ">=0.44,<0.46"
fastapi = ">=0.135.3,<0.137.0"
pydantic-settings = "^2.13.1"
psycopg2 = "^2.9.11"
python-multipart = ">=0.0.24,<0.0.27"
nanoid = "^2.0.0"
pydantic-extra-types = "^2.11.2"
bcrypt = "^5.0.0"
alembic = "^1.18.4"

[tool.poetry.dev-dependencies]
pylint = "^4.0.5"
pytest = "^9.0.3"
black = "^26.3.1"
pre-commit = "^4.6.0"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
